Bumper java til versjon 17